@@ -72,8 +72,9 @@
             <zipfileset src="${src}/jp12serial020.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial020.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
             <zipfileset src="${src}/jp1usb_dll_031.zip" includes="jp1usb.dll" prefix="Windows-x86"/>
-			<zipfileset src="${src}/DecodeIR_244.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
-			<zipfileset src="${src}/DecodeIR_244.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt" filemode="555"/>
+			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
+			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt" filemode="555"/>
+          	<zipfileset src="${src}/RdfAndImages.zip" includes="**/*" defaultexcludes="no"/>
             <zipfileset dir="${src}" includes="*.sh" filemode="755" />
 			<!-- Tutorial is now on the wiki
           	<zipfileset dir="${src}" includes="tutorial.htm" />
